små endringer på alle tre sidene
jobbet hovedsakelig med main området på index og produkt siden

--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
     <nav>
         <ul>
             <li><a href="index.html">home</a></li>
-            <li><a href="#products">products</a></li>
+            <li><a href="#popular-products">products</a></li>
             <li><a href="index.html"> Logo </a></li>
-            <li><a href="#categories">categories</a></li>
-            <li><a href="contact.html">contact us</a></li>
+            <li><a href="#popular-categories">categories</a></li>
+            <li><a href="checkout.html">cart</a></li>
+            <li><a href="#contact-info">contact us</a></li>
         </ul>
         <form>
             <label for="search">search</label>
-            <input type="search" placeholder="search products..">
+            <input type="text" id="search" placeholder="search products..">
             <input type="submit" value="search">
         </form>
     </nav>
@@ -32,7 +33,7 @@
         <a href="#popular-products">explore now!</a>
     </section>
 
-    <section>
+    <section id="popular-products">
         <h3>our most popular products</h3>
         <p>our best-selling products</p>
     </section>
@@ -42,38 +43,124 @@
         <button>Best sellers</button>
     </section>
 
+    <section>
+        <article>
+            <img src="#" alt="product 1">
+            <h4>product-name</h4>
+            <p>Price</p>
+        </article>
+        <article>
+            <img src="#" alt="product 2">
+            <h4>product-name</h4>
+            <p>Price</p>
+        </article>
+        <article>
+            <img src="#" alt="product 3">
+            <h4>product-name</h4>
+            <p>Price</p>
+        </article>
+        <article>
+            <img src="#" alt="product 4">
+            <h4>product-name</h4>
+            <p>Price</p>
+        </article>
+        <article>
+            <img src="#" alt="product 5">
+            <h4>product-name</h4>
+            <p>Price</p>
+        </article>
+        <article>
+            <img src="#" alt="product 6">
+            <h4>product-name</h4>
+            <p>Price</p>
+        </article>
+    </section>
+
+    <section id="popular-categories">
+        <h3>our most popular categories</h3>
+        <p>discover best of the best! in our top categories</p>
+
+        <article>
+            <h3>category 1</h3>
+        </article>
+
+        <article>
+            <h3>category 2</h3>
+        </article>
+
+        <article>
+            <h3>category 3</h3>
+        </article>
+
+        <article>
+            <h3>category 4</h3>
+        </article>
+
+        <article>
+            <h3>category 5</h3>
+        </article>
+    </section>
+
+    <section>
+        <h3>Reviews</h3>
+
+        <article>
+            <img src="#" alt="Reviews 1">
+            <h4>Reviews 1</h4>
+            <p>xxx</p>
+        </article>
+
+        <article>
+            <img src="#" alt="Reviews 1">
+            <h4>Reviews 2</h4>
+            <p>xxx</p>
+        </article>
+
+        <article>
+            <img src="#" alt="Reviews 1">
+            <h4>Reviews 3</h4>
+            <p>xxx</p>
+        </article>
+
+        <article>
+            <img src="#" alt="Reviews 1">
+            <h4>Reviews 4</h4>
+            <p>xxx</p>
+        </article>
+    </section>
+
 </main>
 
-<footer>
+<footer id="footer">
 <section>
     <h3>Logo</h3>
     <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
 </section>
 
-<section>
-<h4>KONTACT</h4>
-<p>Adresse:B R A Veien 4, 1757 Halden</p>
+<section id="contact-info">
+<h4>Kontact Info</h4>
+<p>Adress:B R A Veien 4, 1757 Halden</p>
 <p>Phone:69 60 80 00</p>
-<p>Mail:postmottak@hiof.no</p>
+<p>Mail:postmottak@nettbutikk.no</p>
 <p>opening hours:Closing 16.00</p>
 </section>
 
 <section>
     <h4>SHORTCUTS</h4>
     <ul>
-        <li><a href="#products">products</a></li>
-        <li><a href="#categories">categories</a></li>
-        <li><a href="contact.html">contacts us</a></li>
+        <li><a href="#popular-products">products</a></li>
+        <li><a href="#popular-categories">categories</a></li>
+        <li><a href="#contact-info">contacts us</a></li>
     </ul>
 </section>
 
 <section>
     <h4>SOSIAL MEDIA</h4>
     <ul>
-        <li><a href="https://instagram.com">instagram</a></li>
-        <li><a href="https://facebook.com">facebook</a></li>
-        <li><a href="https://linkedin.com">linkedin</a></li>
-        <li><a href="https://pinterest.com">pinterest</a></li>
+        <li><a href="https://instagram.com">Instagram</a></li>
+        <li><a href="https://facebook.com">Facebook</a></li>
+        <li><a href="https://linkedin.com">Linkedin</a></li>
+        <li><a href="https://pinterest.com">Pinterest</a></li>
     </ul>
 </section>
 </footer>    
