--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
             <h3>category 3</h3>
         </article>
 
-        <article class="category-card">
+        <article class="category-card special">
             <h3>category 4</h3>
         </article>
 
-        <article class="category-card">
+        <article class="category-card special">
             <h3>category 5</h3>
         </article>
     </section>
