--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
             <li><a href="#popular-categories">categories</a></li>
             <li><a href="#contact-info">contact us</a></li>
             <li><a href="checkout.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
-            <li><a href="#"> <i class="fa-regular fa-user"></i></a></li>
-            <li><a href="#"> <i class="fa-regular fa-heart"></i></a></li>
+            <li><a href="#"><i class="fa-regular fa-user"></i></a></li>
         </ul>
     </nav>
 </header>
@@ -38,7 +37,7 @@
         <a href="#popular-products">explore now!</a>
     </section>
 
-    <section id="popular-products" class="product-list">
+    <section class="product-list">
         <h3>Our most popular products</h3>
         <p>Best-selling products</p>
     </section>
@@ -50,10 +49,10 @@
         </ul>
     </section>
 
-    <section>
+    <section id="popular-products" class="product-grid">
         <article class="product-card">
             <a href="produkt.html">
-            <img src="image/boutique-4342604_1280.jpg" alt="product 1" class="product-image">
+            <img src="image/boutique-4342604_1280.jpg" alt="product 1">
             <h4 class="product-name">product-name</h4>
             <p class="product-price">Price</p>
         </a>
@@ -95,10 +94,11 @@
         </article>
     </section>
 
+    <section id=categories>
+        <h3 class="h3-categories">Our most popular categories</h3>
+    </section>
+        
     <section id="popular-categories" class="category-list">
-        <h3>our most popular categories</h3>
-        <p>discover best of the best! in our top categories</p>
-
         <article class="category-card">
             <h3>category 1</h3>
         </article>
@@ -120,11 +120,10 @@
         </article>
     </section>
 
-    <section id="reviews" class="reviews-section">
-        <h3>Reviews</h3>
 
-        
-        <article class="review-card">
+    <h3 class="h3-review">Review</h3>
+    <section id="reviews" class="reviews-section">     
+     <article class="review-card">
             <figure>
             <img src="image/man-1253004_640.jpg" alt="Reviews 1">
             <figcaption>Roberto Carlos</figcaption>
@@ -192,17 +191,21 @@
 <section>
     <h4>SOSIAL MEDIA</h4>
     <ul>
-        <li><a href="https://instagram.com">Instagram</a></li>
-        <i class="fa-brands fa-instagram"></i>
+        <li>
+            <a href="https://instagram.com"><i class="fa-brands fa-instagram"></i></a>
+        </li>
 
-        <li><a href="https://facebook.com">Facebook</a></li>
-        <i class="fa-brands fa-facebook"></i>
+        <li>
+            <a href="https://facebook.com"><i class="fa-brands fa-facebook"></i></a>
+        </li>
 
-        <li><a href="https://linkedin.com">Linkedin</a></li>
-        <i class="fa-brands fa-linkedin"></i>
+        <li>
+            <a href="https://linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
+        </li>
 
-        <li><a href="https://pinterest.com">Pinterest</a></li>
-        <i class="fa-brands fa-pinterest"></i>
+        <li>
+            <a href="https://pinterest.com"> <i class="fa-brands fa-pinterest"></i></a>
+        </li>
     </ul>
 </section>
 </footer>    
