--- a/checkout.html
+++ b/checkout.html
@@ -60,7 +60,7 @@
             <input type="number" id="quantity1" min="1" value="1">
         </article>
     </section>
-    <section id="cart" class="shopping-cart">
+    <section id="cart1" class="shopping-cart">
         <article class="cart-item">
             <figure>
                 <img src="image/boutique-4342604_1280.jpg" alt="Boutique dress">
@@ -71,17 +71,17 @@
                 </figcaption>
             </figure>
             <label for="size1">Size</label>
-            <select name="size1" id="size1">
+            <select name="size-1" id="size">
                 <option value="S">Small</option>
                 <option value="M">Medium</option>
                 <option value="L">Large</option>
             </select>
 
             <label for="quantity1">Quantity</label>
-            <input type="number" id="quantity1" min="1" value="1">
+            <input type="number" id="quantity_1" min="1" value="1">
         </article>
     </section>
-    <section id="cart" class="shopping-cart">
+    <section id="cart2" class="shopping-cart">
         <article class="cart-item">
             <figure>
                 <img src="image/boutique-4342604_1280.jpg" alt="product image">
@@ -92,14 +92,14 @@
                 </figcaption>
             </figure>
             <label for="size1">Size</label>
-            <select name="size1" id="size1">
+            <select name="size1" id="size2">
                 <option value="S">Small</option>
                 <option value="M">Medium</option>
                 <option value="L">Large</option>
             </select>
 
-            <label for="quantity1">Quantity</label>
-            <input type="number" id="quantity1" min="1" value="1">
+            <label for="Quantity">Quantity</label>
+            <input type="number" id="Quantity" min="1" value="1">
         </article>
     </section>
 
